tests/pass/function_4.crdm
fn ret_one() -> fn() -> int {
    return || int -> { return 1; };
}

fn main() {
    let one: fn() -> int = ret_one();

    one();
}