tests/fail/closure_3.crdm
fn main() {
    let increment: fn(&int) -> void = |x| void -> { x += 1; };

    let closure_ret_closure: fn() -> fn(&int) -> void = || fn(&int) -> void -> { return increment; };

    closure_ret_closure()(1.0);
}